update readme link to go to repo

--- a/Resources/mill-street-timeline-visual.html
+++ b/Resources/mill-street-timeline-visual.html
@@ -319,7 +319,7 @@
 </head>
 <body>
     <nav class="sticky-nav">
-        <a href="../!README.md" class="nav-link">← Back to README</a>
+        <a href="https://github.com/tdemelle-SiP/bakers_pond/blob/master/!README.md" class="nav-link">← Back to README</a>
         <div class="nav-title">42 Mill Street Timeline</div>
         <div></div>
     </nav>
