--- a/Resources/mill-street-timeline-visual.html
+++ b/Resources/mill-street-timeline-visual.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>42 Mill Street Timeline: Public vs Private</title>
+    <script>
+        // Add timestamp to force reload on each visit
+        if (!window.location.search.includes('v=')) {
+            window.location.search = '?v=' + Date.now();
+        }
+    </script>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
