1. HTML page cache-busting (?v= in URL): Ensures the browser loads the   latest HTML/JavaScript code if you make changes to the visualization   itself (colors, layout, parsing logic)   2. Data fetch cache-busting (?v= on markdown fetch): Ensures the browser   always fetches the latest timeline data from the markdown file
  Without the first one: If you update the visualization code, users might
  see old visualization logic.

  Without the second one: If you update the timeline data, users might see
  cached/old events even though the visualization code is fresh.

  Both are needed because browsers can cache at multiple levels:
  - The HTML page itself
  - The fetched resources (markdown file)

--- a/Resources/timeline-auto-generated.html
+++ b/Resources/timeline-auto-generated.html
@@ -369,8 +369,8 @@
         // Timeline data parser and renderer
         async function loadTimeline() {
             try {
-                // Fetch the timeline overview markdown file
-                const response = await fetch('../!42_Mill_St_Timeline_Overview.md');
+                // Fetch the timeline overview markdown file with cache busting
+                const response = await fetch('../!42_Mill_St_Timeline_Overview.md?v=' + Date.now());
                 if (!response.ok) throw new Error('Failed to load timeline data');
                 
                 const text = await response.text();
