The parser was looking for   the old table header format. Now it's looking for    the new format with the Case # column.

--- a/Resources/timeline-auto-generated.html
+++ b/Resources/timeline-auto-generated.html
@@ -528,7 +528,7 @@
             // Skip header lines and find the table
             let inTable = false;
             for (const line of lines) {
-                if (line.includes('| Date | Document | Mrkr |')) {
+                if (line.includes('| Date | Document | Case # | Mrkr |')) {
                     inTable = true;
                     continue;
                 }
