the labels are positioned to align   with the dots:   - "PUBLIC PROCEEDINGS" at 85px aligns with the   public dots at 100px   - "SHADOW PROCEEDINGS" at 140px aligns with the   private dots at 150px
  The labels will now appear inline with the
  events, not taking up extra vertical space.

--- a/Resources/timeline-auto-generated.html
+++ b/Resources/timeline-auto-generated.html
@@ -332,22 +332,23 @@
         .section-label {
             position: absolute;
             font-weight: bold;
-            font-size: 18px;
+            font-size: 16px;
             color: #555;
-            background: rgba(255,255,255,0.9);
-            padding: 8px 16px;
+            background: rgba(255,255,255,0.95);
+            padding: 6px 14px;
             border-radius: 4px;
             box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+            z-index: 20;
         }
         
         .public-label {
-            top: 10px;
+            top: 85px;
             left: 50px;
             color: #2e7d32;
         }
         
         .private-label {
-            bottom: 10px;
+            top: 140px;
             left: 50px;
             color: #c62828;
         }
