--- a/Resources/timeline-auto-generated.html
+++ b/Resources/timeline-auto-generated.html
@@ -26,7 +26,7 @@
             flex: 1;
             display: flex;
             align-items: center;
-            justify-content: center;
+            justify-content: flex-start;
             padding-top: 160px;
             overflow-x: auto;
             overflow-y: auto;
@@ -135,11 +135,9 @@
             width: fit-content;
             background: white;
             padding: 30px 40px;
+            margin: 0 20px;
             border-radius: 8px;
             box-shadow: 0 4px 20px rgba(0,0,0,0.1);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
         }
         
         .timeline-container {
